# scranpy

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  authors.html  changelog.html  contributing.html  customization.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
_modules/: index.html
_sources/: customization.md.txt  index.md.txt  tutorial.md.txt
api/: modules.html  scranpy.aggregation.html  scranpy.analyze.html  scranpy.batch_correction.html  scranpy.clustering.html  scranpy.dimensionality_reduction.html  scranpy.feature_selection.html  scranpy.feature_set_enrichment.html  scranpy.html  scranpy.marker_detection.html  scranpy.nearest_neighbors.html  scranpy.normalization.html  scranpy.quality_control.html
docs/: conf.py  customization.md  index.md  requirements.txt  tutorial.md
lib/: CMakeLists.txt  aggregate_across_cells.cpp  choose_hvgs.cpp  model_gene_variances.cpp  parallel.h  per_cell_adt_qc_metrics.cpp  per_cell_crispr_qc_metrics.cpp  per_cell_rna_qc_metrics.cpp  run_pca.cpp  run_tsne.cpp  scale_by_neighbors.cpp  suggest_rna_qc_filters.cpp
lib/src/: adt_quality_control.cpp  aggregate_across_cells.cpp  aggregate_across_genes.cpp  block.h  build_snn_graph.cpp  center_size_factors.cpp  choose_highly_variable_genes.cpp  choose_pseudo_count.cpp  cluster_graph.cpp  cluster_kmeans.cpp  combine_factors.cpp  compute_clrm1_factors.cpp  correct_mnn.cpp  crispr_quality_control.cpp  fit_variance_trend.cpp  init.cpp  model_gene_variances.cpp  neighbors.h  normalize_counts.cpp  qc.h  rna_quality_control.cpp  run_pca.cpp  run_tsne.cpp  run_umap.cpp  sanitize_size_factors.cpp  scale_by_neighbors.cpp  score_gene_set.cpp  score_markers.cpp  subsample_by_neighbors.cpp  summarize_effects.cpp  test_enrichment.cpp  utils.h
notebooks/: zeisel.ipynb
scripts/: dryrun.py
tests/: conftest.py  test_adt_quality_control.py  test_aggregate_across_cells.py  test_aggregate_across_genes.py  test_analyze.py  test_build_snn_graph.py  test_center_size_factors.py  test_choose_highly_variable_genes.py  test_choose_hvgs.py  test_choose_pseudo_count.py  test_cluster_graph.py  test_cluster_kmeans.py  test_combine_embeddings.py  test_combine_factors.py  test_compute_clrm1_factors.py  test_correct_mnn.py  test_create_adt_qc_filter.py  test_create_crispr_qc_filter.py  test_create_rna_qc_filter.py  test_crispr_quality_control.py  test_dense.py  test_dimreds.py  test_downsample_by_neighbors.py  test_filter_cells.py  test_fit_variance_trend.py  (+31 more)
(+241 files in other folders)
